# bluetooth

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/healthy/: ExampleInstrumentedTest.kt  FragmentTest.kt  ThreadUtilTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  test_breakpad.cpp
app/src/main/res/anim/: rote_animate.xml
app/src/main/res/animator/: vector_animation_test1.xml  vector_animator_test2.xml
app/src/main/res/drawable/: click_animator.xml  device_botton_background.xml  ic_baseline_agriculture_24.xml  ic_baseline_bluetooth_connected_24.xml  list_item_shape.xml  shape_26_radius.xml  shape_solid_black_corner_3.xml  shape_solid_white_corner_10.xml  shape_stroke_black_corner_3.xml  shape_stroke_corner_10.xml  start_layer_list.xml  vector_animator_test1.xml  vector_animator_test2.xml
app/src/main/res/drawable-v24/: ic_detail_back_no_circle.xml
app/src/main/res/layout/: activity_camera.xml  activity_test_image_load.xml  device_item.xml  devices_list_item.xml  dialog_util_layout.xml  fragment_data.xml  fragment_devices.xml  fragment_login.xml  fragment_login_sms.xml  fragment_normal_bluetooth.xml  fragment_setting.xml  fragment_sign_up.xml  imege_card_view.xml  item_chat_layout.xml  item_upload_file.xml  main_activity.xml  main_fragment.xml  notice_pop_window.xml  seven_fragment.xml  test_activity.xml
app/src/main/res/menu/: device_menu.xml  menu_scrolling.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+103 files in other folders)
